--- a/Android/app/src/main/AndroidManifest.xml
+++ b/Android/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
         android:theme="@style/Theme.CommunityGroups"
         tools:targetApi="31">
         <activity
-            android:name=".ui.LoginActivity"
+            android:name=".LoginActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.CommunityGroups.NoActionBar">
@@ -30,7 +30,7 @@
         </activity>
 
         <activity
-            android:name=".ui.TokenActivity"
+            android:name=".TokenActivity"
             android:theme="@style/AppTheme"
             android:windowSoftInputMode="stateHidden" >
         </activity>
